# fly-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  start_copilot.sh
fly_python_sdk/: __init__.py  constants.py  exceptions.py  fly.py  fly_old.py  main.py  models.py
fly_python_sdk/copilot/: main.py
fly_python_sdk/copilot/templates/: index.html
fly_python_sdk/copilot/templates/htmx/: machines_grid.html
fly_python_sdk/fly/: __init__.py  api.py  app.py  apps.py  machine.py  machines.py  org.py  volume.py
fly_python_sdk/models/: app.py  machine.py  org.py  volume.py
fly_python_sdk/models/apps/: __init__.py
fly_python_sdk/models/machines/: __init__.py
flypy/: __init__.py  constants.py  exceptions.py  fly.py  models.py
flypy/fly/: __init__.py  fly_app.py  fly_machine.py
flypy/models/machines/: __init__.py
tests/: __init__.py  flypy_test.py  tests.py
