[tool.poetry]
name = "fly-python-sdk"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
pydantic = "^2.0.2"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.243"
python-dotenv = "^0.21.1"
pytest = "^7.2.1"
flit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
