[tool.poetry]
name = "fly-python-sdk"
version = "0.2.2"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.2"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.243"
python-dotenv = "^0.21.1"
pytest = "^7.2.1"
flit = "^3.8.0"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
